fix: Actions in overlays on mobile hard to press
Buttons on mobile devices could've been cut off, depending on the browsers
chrome size which rendered them either completely off-screen or at least hard
to reach. Using `dvh` (dynamic viewport height) should fix this issue for
most newer browsers.

--- a/internal/view/assets/less/common.less
+++ b/internal/view/assets/less/common.less
@@ -55,7 +55,7 @@ a {
 }
 
 #login-scene {
-	height          : 100vh;
+	height          : 100dvh;
 	padding         : 16px;
 	overflow        : auto;
 	display         : flex;
@@ -186,7 +186,7 @@ a {
 }
 
 #main-scene {
-	min-height      : 100vh;
+	min-height      : 100dvh;
 	padding-top     : 60px;
 	padding-left    : 60px;
 	background-color: var(--bg);
@@ -195,7 +195,7 @@ a {
 		top             : 0;
 		left            : 0;
 		width           : 60px;
-		height          : 100vh;
+		height          : 100dvh;
 		position        : fixed;
 		display         : flex;
 		flex-flow       : column nowrap;
@@ -298,8 +298,8 @@ a {
 		position        : fixed;
 		top             : 0;
 		left            : 0;
-		width           : 100vw;
-		height          : 100vh;
+		width           : 100dvw;
+		height          : 100dvh;
 		z-index         : 10001;
 		background-color: rgba(0, 0, 0, 0.6);
 
@@ -322,7 +322,7 @@ a {
 			top       : auto;
 			right     : 0;
 			bottom    : 0;
-			width     : 100vw;
+			width     : 100dvw;
 			height    : 50px;
 			flex-flow : row nowrap;
 			border-top: 1px solid var(--border);
