--- a/internal/view/assets/less/custom-dialog.less
+++ b/internal/view/assets/less/custom-dialog.less
@@ -14,8 +14,8 @@
 	position        : fixed;
 	top             : 0;
 	left            : 0;
-	width           : 100vw;
-	height          : 100vh;
+	width           : 100dvw;
+	height          : 100dvh;
 	z-index         : 10001;
 	background-color: rgba(0, 0, 0, 0.6);
 	padding         : 32px;
